[gd_scene load_steps=13 format=3 uid="uid://bwe04db4dy1ku"]

[ext_resource type="Script" uid="uid://dhxm5dxm24r7v" path="res://Scripts/scene scripts/hud.gd" id="1_bjfho"]
[ext_resource type="Texture2D" uid="uid://oh1liuiwq6d7" path="res://Sprites/Objects/Coin.png" id="2_6fbih"]
[ext_resource type="FontFile" uid="uid://dmknmcxlvkcm6" path="res://Miscealanous/m6x11plus.ttf" id="3_t1xeu"]
[ext_resource type="Texture2D" uid="uid://cu0ucvua0u0y" path="res://Sprites/Pause-button.png" id="4_2ubmp"]
[ext_resource type="Texture2D" uid="uid://ril7iyiauw0v" path="res://Sprites/Pause-button-pressed.png" id="5_u1fe8"]
[ext_resource type="Texture2D" uid="uid://d3b37tkar16w6" path="res://Sprites/Pause-button-hover.png" id="6_2x80y"]
[ext_resource type="Shader" uid="uid://dm47q4kny0bj7" path="res://Scripts/shader/hud.gdshader" id="7_u1fe8"]
[ext_resource type="Texture2D" uid="uid://c1wy43lsbgqgf" path="res://Sprites/Objects/Sign-Board/Sign-board.png" id="8_k1jev"]
[ext_resource type="Texture2D" uid="uid://j5fcmts8n05s" path="res://Sprites/Objects/Sign-Board/Chain.png" id="8_mbgcg"]
[ext_resource type="Texture2D" uid="uid://buj806hrtv2nn" path="res://Sprites/Objects/Sign-Board/Sign-board-pressed.png" id="9_mbgcg"]
[ext_resource type="Texture2D" uid="uid://dyakey5pserjp" path="res://Sprites/Objects/Sign-Board/Sign-board-hover.png" id="10_bdieq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2x80y"]
shader = ExtResource("7_u1fe8")
shader_parameter/blur_size = 4.0
shader_parameter/darkness = 0.6
shader_parameter/radial_strength = 0.5
shader_parameter/wobble_strength = 0.6
shader_parameter/time_speed = 1.0

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_bjfho")

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(1056, 28)
scale = Vector2(3, 3)
texture = ExtResource("2_6fbih")

[node name="GlobalCoinLabel" type="Label" parent="."]
offset_left = 1080.0
offset_top = 6.0
offset_right = 1145.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 40
text = ": 144"

[node name="LevelCointxt" type="Label" parent="."]
offset_left = 1051.0
offset_top = 62.0
offset_right = 1127.0
offset_bottom = 103.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 40
text = "Level:"

[node name="Coin2" type="Sprite2D" parent="."]
position = Vector2(1093, 69)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_6fbih")

[node name="LevelCoinLabel" type="Label" parent="."]
offset_left = 1105.0
offset_top = 55.0
offset_right = 1170.0
offset_bottom = 96.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 40
text = ": 0/3"

[node name="Pause Button" type="TextureButton" parent="."]
offset_right = 60.0
offset_bottom = 60.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_2ubmp")
texture_pressed = ExtResource("5_u1fe8")
texture_hover = ExtResource("6_2x80y")
stretch_mode = 0

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_2x80y")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu"]
position = Vector2(410, -95)
scale = Vector2(6, 6)
texture = ExtResource("8_mbgcg")

[node name="Sprite2D2" type="Sprite2D" parent="PauseMenu"]
position = Vector2(746, -95.00001)
scale = Vector2(6, 6)
texture = ExtResource("8_mbgcg")

[node name="Resume Button" type="TextureButton" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 309.0
offset_top = 100.0
offset_right = 391.0
offset_bottom = 140.0
grow_horizontal = 2
scale = Vector2(6, 3)
texture_normal = ExtResource("8_k1jev")
texture_pressed = ExtResource("9_mbgcg")
texture_hover = ExtResource("10_bdieq")
stretch_mode = 0

[node name="RESUME" type="Label" parent="PauseMenu/Resume Button"]
layout_mode = 0
offset_left = 23.3333
offset_top = 3.66666
offset_right = 96.3333
offset_bottom = 33.6667
scale = Vector2(0.5, 1)
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 30
text = "RESUME"
horizontal_alignment = 1

[node name="Restart Button" type="TextureButton" parent="PauseMenu"]
layout_mode = 0
offset_left = 329.0
offset_top = 220.0
offset_right = 411.0
offset_bottom = 260.0
scale = Vector2(6, 3)
texture_normal = ExtResource("8_k1jev")
texture_pressed = ExtResource("9_mbgcg")
texture_hover = ExtResource("10_bdieq")
stretch_mode = 0

[node name="RESTART" type="Label" parent="PauseMenu/Restart Button"]
layout_mode = 0
offset_left = 20.5
offset_top = 4.0
offset_right = 102.5
offset_bottom = 34.0
scale = Vector2(0.5, 1)
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 30
text = "RESTART"
horizontal_alignment = 1

[node name="Quit Button" type="TextureButton" parent="PauseMenu"]
layout_mode = 0
offset_left = 329.0
offset_top = 340.0
offset_right = 411.0
offset_bottom = 380.0
scale = Vector2(6, 3)
texture_normal = ExtResource("8_k1jev")
texture_pressed = ExtResource("9_mbgcg")
texture_hover = ExtResource("10_bdieq")
stretch_mode = 0

[node name="QUIT" type="Label" parent="PauseMenu/Quit Button"]
layout_mode = 0
offset_left = 29.5
offset_top = 4.0
offset_right = 77.5
offset_bottom = 34.0
scale = Vector2(0.5, 1)
theme_override_fonts/font = ExtResource("3_t1xeu")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="DebugMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="DebugMenu"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMenu"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="DebugMenu/VBoxContainer"]
layout_mode = 2

[node name="X" type="Label" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X:"

[node name="LineEditX" type="LineEdit" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Y" type="Label" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Y:"

[node name="LineEditY" type="LineEdit" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="tp Button" type="Button" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "teleport
"

[node name="Reset Button" type="Button" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset Level Progress
"

[node name="Button" type="Button" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset Coin Progress"

[node name="Button2" type="Button" parent="DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Unlock All Levels"

[node name="add coins" type="Button" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "add coins (5)"

[node name="Invincible" type="CheckButton" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "invincible / noclip"

[node name="Values" type="CheckButton" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "show data"

[node name="CheckButton" type="CheckButton" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "infinte jump"

[node name="ColorRect" type="ColorRect" parent="DebugMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
color = Color(0.23031491, 0.23031494, 0.23031494, 1)

[node name="Label" type="Label" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "This is the Debug Menu, in here you can give yourself some
cheats, if you want to open it again, just press F8 while Paused,
or on Mobile hold the Top left and Top right corner pressed!"

[node name="exit debug" type="Button" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Exit debug"

[node name="LabelFPS" type="Label" parent="."]
offset_left = 1.0
offset_top = 62.0
offset_right = 41.0
offset_bottom = 85.0

[connection signal="pressed" from="Pause Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Restart Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/HBoxContainer/tp Button" to="." method="_on_teleport_button_pressed"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/HBoxContainer/Reset Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/HBoxContainer/Button" to="." method="_on_Coin_reset_button_pressed"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/HBoxContainer/Button2" to="." method="_on_level_unlock_button_pressed"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/add coins" to="." method="_on_add_coins_pressed"]
[connection signal="button_down" from="DebugMenu/VBoxContainer/Invincible" to="." method="_on_invincible_button_down"]
[connection signal="button_up" from="DebugMenu/VBoxContainer/Invincible" to="." method="_on_invincible_button_up"]
[connection signal="button_down" from="DebugMenu/VBoxContainer/Values" to="." method="_on_values_button_down"]
[connection signal="button_up" from="DebugMenu/VBoxContainer/Values" to="." method="_on_values_button_up"]
[connection signal="button_down" from="DebugMenu/VBoxContainer/CheckButton" to="." method="_on_check_button_button_down"]
[connection signal="button_up" from="DebugMenu/VBoxContainer/CheckButton" to="." method="_on_check_button_button_up"]
[connection signal="pressed" from="DebugMenu/VBoxContainer/exit debug" to="." method="_on_exit_debug_pressed"]
